--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>Mail Dadi</title>
 </head>
 <body>
-    
+    <label for="email">Inserisci la tua email: </label>
+    <input type="email" name="inputEmail" id="inputEmail">
+    <button onclick="invito()">Controlla</button>
+
+    <div id="risposta"></div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
