modifico function in js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <label for="email">Inserisci la tua email: </label>
     <input type="email" name="inputEmail" id="inputEmail">
-    <button onclick="invito()">Controlla</button>
+    <button onclick="send()">Controlla</button>
 
     <div id="risposta"></div>
 
